{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 14,
  "lineage": "61858acc-7f09-b40d-073f-5a4e4cbdfa57",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0552b979043f9dda2",
            "associate_with_private_ip": "10.0.0.10",
            "association_id": "eipassoc-0ad22b17f7e4e4012",
            "domain": "vpc",
            "id": "eipalloc-0552b979043f9dda2",
            "instance": "i-0149bf800b6edf311",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09a3664f38eb0feb1",
            "private_dns": "ip-10-0-0-10.ec2.internal",
            "private_ip": "10.0.0.10",
            "public_dns": "ec2-34-234-8-152.compute-1.amazonaws.com",
            "public_ip": "34.234.8.152",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP_A"
            },
            "tags_all": {
              "Name": "EIP_A"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.EC2-S3_Profile",
            "aws_iam_role.EC2-S3",
            "aws_instance.Instance_A",
            "aws_internet_gateway.GW_Codepoint",
            "aws_network_interface.ENI_A",
            "aws_security_group.SG_Codepoint",
            "aws_subnet.Subnet_Codepoint",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Instance_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-003d3d03cfe1b0468",
            "arn": "arn:aws:ec2:us-east-1:194568597186:instance/i-0149bf800b6edf311",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2-S3_Profile",
            "id": "i-0149bf800b6edf311",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Codepoint",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-09a3664f38eb0feb1"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09a3664f38eb0feb1",
            "private_dns": "ip-10-0-0-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0697d15bd3ccedbeb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ddd8399c64fa03af",
            "tags": {
              "Name": "Codepoint_1.0"
            },
            "tags_all": {
              "Name": "Codepoint_1.0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0734a161b1bd81f07"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.EC2-S3_Profile",
            "aws_iam_role.EC2-S3",
            "aws_internet_gateway.GW_Codepoint",
            "aws_network_interface.ENI_A",
            "aws_security_group.SG_Codepoint",
            "aws_subnet.Subnet_Codepoint",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "GW_Codepoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194568597186:internet-gateway/igw-02ca254010bb900f4",
            "id": "igw-02ca254010bb900f4",
            "owner_id": "194568597186",
            "tags": {
              "Name": "IG_Codepoint"
            },
            "tags_all": {
              "Name": "IG_Codepoint"
            },
            "vpc_id": "vpc-0a1cc2a1b402ca6a1"
          },
          "dependencies": [
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ENI_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194568597186:network-interface/eni-09a3664f38eb0feb1",
            "id": "eni-09a3664f38eb0feb1",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:12:ea:71:d8:ab",
            "owner_id": "194568597186",
            "private_ip": "10.0.0.10",
            "private_ip_list": [
              "10.0.0.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0734a161b1bd81f07"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ddd8399c64fa03af"
          },
          "dependencies": [
            "aws_internet_gateway.GW_Codepoint",
            "aws_security_group.SG_Codepoint",
            "aws_subnet.Subnet_Codepoint",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT_Codepoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194568597186:route-table/rtb-0deb949672f6914be",
            "id": "rtb-0deb949672f6914be",
            "owner_id": "194568597186",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ca254010bb900f4",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ca254010bb900f4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT_Codepoint"
            },
            "tags_all": {
              "Name": "RT_Codepoint"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1cc2a1b402ca6a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.GW_Codepoint",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_to_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4af3427c9e3f893",
            "route_table_id": "rtb-0deb949672f6914be",
            "subnet_id": "subnet-0ddd8399c64fa03af"
          },
          "dependencies": [
            "aws_internet_gateway.GW_Codepoint",
            "aws_route_table.RT_Codepoint",
            "aws_subnet.Subnet_Codepoint",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_Codepoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194568597186:security-group/sg-0734a161b1bd81f07",
            "description": "Allow SSH, HTTP, HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0734a161b1bd81f07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG_Codepoint",
            "name_prefix": "",
            "owner_id": "194568597186",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG_Codepoint"
            },
            "tags_all": {
              "Name": "SG_Codepoint"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1cc2a1b402ca6a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet_Codepoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194568597186:subnet/subnet-0ddd8399c64fa03af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddd8399c64fa03af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194568597186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet_Codepoint"
            },
            "tags_all": {
              "Name": "Subnet_Codepoint"
            },
            "vpc_id": "vpc-0a1cc2a1b402ca6a1"
          },
          "dependencies": [
            "aws_internet_gateway.GW_Codepoint",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194568597186:vpc/vpc-0a1cc2a1b402ca6a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07fc1d1bdfa6206c7",
            "default_route_table_id": "rtb-0e5b642d6613ca2de",
            "default_security_group_id": "sg-00b05211700e6c6a6",
            "dhcp_options_id": "dopt-08f290b9752810275",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a1cc2a1b402ca6a1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e5b642d6613ca2de",
            "owner_id": "194568597186",
            "tags": {
              "name": "Codepoint"
            },
            "tags_all": {
              "name": "Codepoint"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:194568597186:vpc-endpoint/vpce-08c838dc850f2fed2",
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-08c838dc850f2fed2",
            "owner_id": "194568597186",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Environment": "test"
            },
            "tags_all": {
              "Environment": "test"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0a1cc2a1b402ca6a1"
          },
          "dependencies": [
            "aws_vpc.A"
          ]
        }
      ]
    }
  ]
}